# gesture-recognition

./: README.md
ROSArduinoBridge/: encoder_driver.h  motor_driver.h
image_pub/: CMakeLists.txt  package.xml
image_pub/scripts/: FingerCounter.py  HandTrackingModule.py  test.py
image_pub/src/: 1.cpp  simple_camera.cpp
point-re/: FingerCounter.py  HandTrackingModule.py
rosserial_test/: CMakeLists.txt  package.xml
rosserial_test/config/: hokuyo_config.yaml
rosserial_test/include/rosserial_test/: SerialPort.h  odom_req.h
rosserial_test/launch/: bringup.launch
rosserial_test/launch/include/: laser.launch
rosserial_test/launch/include/lidar/: rplidar.launch
rosserial_test/msg/: speed.msg
rosserial_test/param/ekf/: robot_localization.yaml
rosserial_test/src/: SerialPort.cpp  driver_to_cmd.cpp  odom_req.cpp  odom_req_node.cpp  speed.cpp
